[package]
name = "stylus-hello-world-minimal"
version = "0.1.2"
edition = "2021"

[dependencies]
alloy-primitives = "0.7.6"
alloy-sol-types = "0.7.6"
stylus-sdk = "0.6.0"
mini-alloc = "0.4.2"

[features]
export-abi = ["stylus-sdk/export-abi"]
debug = ["stylus-sdk/debug"]

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"

[workspace]
