[package]
name = "stylus-hello-world-minimal"
version = "0.1.3"
edition = "2021"

[dependencies]
stylus-sdk = "0.8.0"

[features]
export-abi = ["stylus-sdk/export-abi"]
debug = ["stylus-sdk/debug"]

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"

[workspace]
