[package]
name = "stylus-hello-world-minimal"
version = "0.1.3"
edition = "2021"

[dependencies]
stylus-sdk = { version = "0.8.4", features = ["stylus-test"] }

[dev-dependencies]
rclite = "=0.2.5"

[features]
export-abi = ["stylus-sdk/export-abi"]
debug = ["stylus-sdk/debug"]

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"

[workspace]
